--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Rocket.Q - Perguntas e Respostas</title>
 
     <!--STYLES-->
 
-    <link rel="stylesheet" href="styles/global.css" />
-    <link rel="stylesheet" href="styles/room.css" />
-    <link rel="stylesheet" href="styles/modal.css" />
+    <link rel="stylesheet" href="/styles/global.css" />
+    <link rel="stylesheet" href="/styles/room.css" />
+    <link rel="stylesheet" href="/styles/modal.css" />
 
     <!-- FONTS -->
 
@@ -26,17 +27,17 @@
   <body>
     <div id="room" class="content">
       <header>
-        <a href="#">
-          <img src="images/logo.svg" alt="Rocket.Q Logo" />
+        <a href="/">
+          <img src="/images/logo.svg" alt="Rocket.Q Logo" />
         </a>
 
         <div class="buttons">
-          <div class="button outlined">
+          <div class="button outlined" id="room-id" data-id="323243">
             #322343
-            <img src="images/copy.svg" alt="Copiar Número da Sala" />
+            <img src="/images/copy.svg" alt="Copiar Número da Sala" />
           </div>
           <a href="#" class="button">
-            <img src="images/users-white.svg" alt="Criar uma Sala" />
+            <img src="/images/users-white.svg" alt="Criar uma Sala" />
             Criar Sala
           </a>
         </div>
@@ -57,7 +58,7 @@
 
             <footer>
               <div>
-                <img src="images/lock.svg" alt="" />
+                <img src="/images/lock.svg" alt="" />
                 Esta pergunta é anônima
               </div>
               <button>Enviar</button>
@@ -72,19 +73,19 @@
             <div class="question-wrapper">
               <div class="question-content">
                 <div class="user">
-                  <img src="images/user.svg" alt="avatar" />
+                  <img src="/images/user.svg" alt="avatar" />
                 </div>
                 <div class="question">
                   <p>Qual a diferença entre const,var e let no JavaScript?</p>
                 </div>
               </div>
               <div class="actions">
-                <a href="#" class="check">
-                  <img src="images/check.svg" alt="Marcar como lida" />
+                <a href="#" class="check" data-id="2">
+                  <img src="/images/check.svg" alt="Marcar como lida" />
                   Marcar como lida
                 </a>
-                <a href="#" class="delete">
-                  <img src="images/trash.svg" alt="Excluir" />
+                <a href="#" class="delete" data-id="2">
+                  <img src="/images/trash.svg" alt="Excluir" />
                   Excluir
                 </a>
               </div>
@@ -93,19 +94,19 @@
             <div class="question-wrapper">
               <div class="question-content">
                 <div class="user">
-                  <img src="images/user.svg" alt="avatar" />
+                  <img src="/images/user.svg" alt="avatar" />
                 </div>
                 <div class="question">
                   <p>O que é JavaScript?</p>
                 </div>
               </div>
               <div class="actions">
-                <a href="#" class="check">
-                  <img src="images/check.svg" alt="Marcar como Lida" />
+                <a href="#" class="check" data-id="3">
+                  <img src="/images/check.svg" alt="Marcar como Lida" />
                   Marcar como lida
                 </a>
-                <a href="#" class="delete">
-                  <img src="images/trash.svg" alt="Excluir" />
+                <a href="#" class="delete" data-id="3">
+                  <img src="/images/trash.svg" alt="Excluir" />
                   Excluir
                 </a>
               </div>
@@ -114,15 +115,15 @@
             <div class="question-wrapper read">
               <div class="question-content">
                 <div class="user">
-                  <img src="images/user.svg" alt="avatar" />
+                  <img src="/images/user.svg" alt="avatar" />
                 </div>
                 <div class="question">
                   <p>O que é CSS?</p>
                 </div>
               </div>
               <div class="actions">
-                <a href="#" class="delete">
-                  <img src="images/trash.svg" alt="Excluir" />
+                <a href="#" class="delete" data-id="1">
+                  <img src="/images/trash.svg" alt="Excluir" />
                   Excluir
                 </a>
               </div>
@@ -136,7 +137,7 @@
       <div class="modal">
         <h2>Excluir Pergunta</h2>
         <p>Tem certeza que você deseja excluir esta pergunta?</p>
-        <form action="#">
+        <form action="#" method="POST">
           <label class="sr-only" for-id="password">Digite sua senha</label>
           <input
             type="password"
@@ -151,6 +152,6 @@
         </form>
       </div>
     </div>
-    <script src="scripts/main.js" defer type="module"></script>
+    <script src="/scripts/main.js" defer type="module"></script>
   </body>
 </html>
