--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -32,11 +32,11 @@
         </a>
 
         <div class="buttons">
-          <div class="button outlined" id="room-id" data-id="323243">
-            #322343
+          <div class="button outlined" id="room-id" data-id="<%= roomId %>">
+            #<%= roomId %>
             <img src="/images/copy.svg" alt="Copiar Número da Sala" />
           </div>
-          <a href="#" class="button">
+          <a href="/create-pass" class="button">
             <img src="/images/users-white.svg" alt="Criar uma Sala" />
             Criar Sala
           </a>
@@ -46,7 +46,7 @@
       <main>
         <section id="question-form">
           <h2>Faça sua Pergunta</h2>
-          <form action="">
+          <form action="/question/create/<%- roomId %> " method="post">
             <label for-id="question" class="sr-only">
               O que você quer perguntar?</label
             >
@@ -70,26 +70,7 @@
           <h2 class="sr-only">Perguntas da Comunidade</h2>
 
           <div class="questions">
-            <div class="question-wrapper">
-              <div class="question-content">
-                <div class="user">
-                  <img src="/images/user.svg" alt="avatar" />
-                </div>
-                <div class="question">
-                  <p>Qual a diferença entre const,var e let no JavaScript?</p>
-                </div>
-              </div>
-              <div class="actions">
-                <a href="#" class="check" data-id="2">
-                  <img src="/images/check.svg" alt="Marcar como lida" />
-                  Marcar como lida
-                </a>
-                <a href="#" class="delete" data-id="2">
-                  <img src="/images/trash.svg" alt="Excluir" />
-                  Excluir
-                </a>
-              </div>
-            </div>
+            <% questions.forEach (question => { %>
 
             <div class="question-wrapper">
               <div class="question-content">
@@ -97,20 +78,21 @@
                   <img src="/images/user.svg" alt="avatar" />
                 </div>
                 <div class="question">
-                  <p>O que é JavaScript?</p>
+                  <p><%= question.title %></p>
                 </div>
               </div>
               <div class="actions">
-                <a href="#" class="check" data-id="3">
-                  <img src="/images/check.svg" alt="Marcar como Lida" />
+                <a href="#" class="check" data-id="<%= question.id %> ">
+                  <img src="/images/check.svg" alt="Marcar como lida" />
                   Marcar como lida
                 </a>
-                <a href="#" class="delete" data-id="3">
+                <a href="#" class="delete" data-id="<%= question.id %> ">
                   <img src="/images/trash.svg" alt="Excluir" />
                   Excluir
                 </a>
               </div>
             </div>
+            <%}); %> <% questionsRead.forEach (questionRead => { %>
 
             <div class="question-wrapper read">
               <div class="question-content">
@@ -118,16 +100,18 @@
                   <img src="/images/user.svg" alt="avatar" />
                 </div>
                 <div class="question">
-                  <p>O que é CSS?</p>
+                  <p><%= questionRead.title %></p>
                 </div>
               </div>
               <div class="actions">
-                <a href="#" class="delete" data-id="1">
+                <a href="#" class="delete" data-id="<%= questionRead.id  %> ">
                   <img src="/images/trash.svg" alt="Excluir" />
                   Excluir
                 </a>
               </div>
             </div>
+
+            <%}); %>
           </div>
         </section>
       </main>
